--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -5,16 +5,284 @@
    "id": "874f72ad",
    "metadata": {},
    "source": [
-    "# The numpy.random package"
+    "# The numpy.random package `"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6df241a1",
+   "metadata": {},
+   "source": [
+    "## Programming for Data Analysis Assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b754a200",
+   "metadata": {},
+   "source": [
+    "### Andrew Walker - G00398788@gmit.ie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57f89fd9",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d86aa1be",
+   "metadata": {},
+   "source": [
+    "This notebook contains an explanation of the ```numpy.random``` package in Python. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acdf6ba1",
+   "metadata": {},
+   "source": [
+    "NumPy is an open source project aiming to enable numerical computing with Python (https://numpy.org/about/). It is used for working with arrays but also has functions for working in domain of linear algebra, fourier transform, and matrices (https://www.w3schools.com/python/numpy/numpy_intro.asp) and has applications in a wide range of fields such as astronomy, physics, engineering, and economics. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e63aa5",
+   "metadata": {},
+   "source": [
+    "The ```numpy.random``` package is used to generate a sequence of numbers which approximate the properties of random numbers. The sequence of numbers that is generated is statistically random and can be used in a wide range of applications.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99221eb4",
+   "metadata": {},
+   "source": [
+    "This notebook will explain the following overarching features of the ```numpy.random``` package:\n",
+    "\n",
+    "- Simple random data\n",
+    "- Permutations\n",
+    "- The purpose of XXXXXXXXXXX Distribution functions\n",
+    "    - Uniform\n",
+    "    - Bell\n",
+    "    - ....\n",
+    "    - ....\n",
+    "    - ....\n",
+    "- The use of seeds in generating pseudo-random numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30b44469",
+   "metadata": {},
+   "source": [
+    "The notebook will explain each feature and the functions contained in each. It will use ........ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5707cb3",
+   "metadata": {},
+   "source": [
+    "At the time of writing this notebook, the latest release of ```numpy.random``` is 1.21.0. This contents of this notebook are based on this release."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfbf28d2",
+   "metadata": {},
+   "source": [
+    "## 2. Simple Random Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcae83ee",
+   "metadata": {},
+   "source": [
+    "The ```numpy.random``` package contains four functions to generate simple random data. These are discussed in this section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ae05e21",
+   "metadata": {},
+   "source": [
+    "### 2.1 Integers\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4317961",
+   "id": "53898199",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54710501",
+   "metadata": {},
+   "source": [
+    "### 2.2 Random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb98949f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a82682",
+   "metadata": {},
+   "source": [
+    "### 2.3 Choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e44bf74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd942e59",
+   "metadata": {},
+   "source": [
+    "### 2.4 Bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b5bfd02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2181e8c",
+   "metadata": {},
+   "source": [
+    "## 3. Permutations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f79271",
+   "metadata": {},
+   "source": [
+    "The ```numpy.random``` package contains three methods for randomly permutating a sequence. These are discussed in this section. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c35056c",
+   "metadata": {},
+   "source": [
+    "### 3.1 Shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914c4eec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9c9df93",
+   "metadata": {},
+   "source": [
+    "### 3.2 Permutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b013c4f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786431ec",
+   "metadata": {},
+   "source": [
+    "### 3.3 Permuted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46de6140",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79638520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "960b59ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06017a52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24a9bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46e083ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d92da6",
+   "metadata": {},
+   "source": [
+    "```numpy.random``` uses a seed to derive the initial state with a sequence of statistcally random numbers generated from this known starting point; the use of a known seed means that the the algorithm is repeatable. \n",
+    "\n",
+    "Therefore, the numbers generated are not completely random and are known as \"pseudo-random numbers\"."
+   ]
   }
  ],
  "metadata": {
