Amend intro and begin integer section

--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -5,7 +5,7 @@
    "id": "874f72ad",
    "metadata": {},
    "source": [
-    "# The numpy.random package `"
+    "# The numpy.random package "
    ]
   },
   {
@@ -45,7 +45,7 @@
    "id": "acdf6ba1",
    "metadata": {},
    "source": [
-    "NumPy is an open source project aiming to enable numerical computing with Python (https://numpy.org/about/). It is used for working with arrays but also has functions for working in domain of linear algebra, fourier transform, and matrices (https://www.w3schools.com/python/numpy/numpy_intro.asp) and has applications in a wide range of fields such as astronomy, physics, engineering, and economics. "
+    "NumPy is an open source project aiming to enable numerical computing with Python (https://numpy.org/about/). It is used for working with arrays and also has functions for working in the domain of linear algebra, fourier transform, and matrices (https://www.w3schools.com/python/numpy/numpy_intro.asp). In has applications in a wide range of fields such as astronomy, physics, engineering, and economics. "
    ]
   },
   {
@@ -53,7 +53,15 @@
    "id": "a8e63aa5",
    "metadata": {},
    "source": [
-    "The ```numpy.random``` package is used to generate a sequence of numbers which approximate the properties of random numbers. The sequence of numbers that is generated is statistically random and can be used in a wide range of applications.    "
+    "The ```numpy.random``` package within NumPy is used to generate a sequence of numbers which approximate the properties of random numbers. The sequence of numbers that is generated is statistically random and can be used in a wide range of applications.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "668e8dc3",
+   "metadata": {},
+   "source": [
+    "The package generates the sequence with the use of a BitGenerator and a Generator. The BitGenerator uses a seed to derive the initial state and create a sequence of statistically random numbers bits. The Generator converts the sequence of random bits for a BitGenerator into sequences of numbers that follow a specific probability distribution (https://numpy.org/doc/stable/reference/random/index.html). "
    ]
   },
   {
@@ -65,7 +73,7 @@
     "\n",
     "- Simple random data\n",
     "- Permutations\n",
-    "- The purpose of XXXXXXXXXXX Distribution functions\n",
+    "- The purpose of five Distribution functions\n",
     "    - Uniform\n",
     "    - Bell\n",
     "    - ....\n",
@@ -92,10 +100,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e361ae5",
+   "metadata": {},
+   "source": [
+    "## 2. Initalising the ```numpy.random``` Package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f14bbb9c",
+   "metadata": {},
+   "source": [
+    "Import Numpy:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f1647f",
+   "metadata": {},
+   "source": [
+    "```import numpy as np```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4e56e16",
+   "metadata": {},
+   "source": [
+    "Construct a new Generator with the default BitGenerator (PCG64): "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb729d11",
+   "metadata": {},
+   "source": [
+    "```rng = np.random.default_rng()```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23f3174",
+   "metadata": {},
+   "source": [
+    "A seed can be specified in ```default_rng```. The use of a known seed means that the the algorithm is repeatable. BitGenerators and seeds are discussed further in Section XXXXXX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dfbf28d2",
    "metadata": {},
    "source": [
-    "## 2. Simple Random Data"
+    "## 3. Simple Random Data"
    ]
   },
   {
@@ -111,13 +167,102 @@
    "id": "4ae05e21",
    "metadata": {},
    "source": [
-    "### 2.1 Integers\n"
+    "### 3.1 Integers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67e06bb",
+   "metadata": {},
+   "source": [
+    "Numpy can be instructed to return random integers. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e05d1479",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "rng = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7251769b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.integers(0, 3, size=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86865012",
+   "metadata": {},
+   "source": [
+    "In this example, the first parameter (```0```) sets the lowest integer that is possible to be generated. The upper limit is defined by the second parameter (```3```); the highest integer that is possible to be generated is one lower than this number. The parameter ```size=5``` designates that 5 random numbers should be generated.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d2bc477",
+   "metadata": {},
+   "source": [
+    "The shape of the output can be changed by specifying the number of rows and columns. For example, a 5 x 5 array containing random numbers between 0 and 9 can be generated using the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "87285c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 9, 8, 8, 7],\n",
+       "       [1, 4, 0, 0, 7],\n",
+       "       [3, 6, 9, 4, 9],\n",
+       "       [3, 2, 6, 9, 9],\n",
+       "       [7, 5, 3, 8, 2]], dtype=int64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.integers(0, 10, size=(5,5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53898199",
+   "id": "1e0a152c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416526bf",
    "metadata": {},
    "outputs": [],
    "source": []
