--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -26,6 +26,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1bbe76a",
+   "metadata": {},
+   "source": [
+    "![numpy.org](https://numpy.org/doc/stable/_static/numpylogo.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57f89fd9",
    "metadata": {},
    "source": [
@@ -115,11 +123,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c3f1647f",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c430dc6",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```import numpy as np```"
+    "import numpy as np"
    ]
   },
   {
@@ -131,11 +141,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fb729d11",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "db98f501",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```rng = np.random.default_rng()```"
+    "rng = np.random.default_rng()"
    ]
   },
   {
@@ -180,28 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e05d1479",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "rng = np.random.default_rng()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7251769b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 0, 0, 2], dtype=int64)"
+       "array([0, 2, 1, 2, 0], dtype=int64)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,21 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "87285c10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4, 9, 8, 8, 7],\n",
-       "       [1, 4, 0, 0, 7],\n",
-       "       [3, 6, 9, 4, 9],\n",
-       "       [3, 2, 6, 9, 9],\n",
-       "       [7, 5, 3, 8, 2]], dtype=int64)"
+       "array([[5, 5, 1, 5, 9],\n",
+       "       [2, 3, 4, 7, 2],\n",
+       "       [2, 5, 1, 3, 0],\n",
+       "       [9, 4, 1, 1, 7],\n",
+       "       [0, 9, 2, 7, 3]], dtype=int64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,20 +253,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e0a152c",
+   "cell_type": "markdown",
+   "id": "6b283ce1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In these examples, the output also includes the data type: ```dtype=int64```. By default, Python has the following data types:\n",
+    "\n",
+    "- strings\n",
+    "- integer\n",
+    "- float\n",
+    "- boolean\n",
+    "- complex\n",
+    "\n",
+    "NumPy also includes a number of additional data types (discussion of which is considered outside the scope of this notebook). \n",
+    "\n",
+    "```dtype=int64``` refers to the output containing 64-bit integers. This can be changed, as shown in the following example to output 8-bit integers:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "416526bf",
+   "execution_count": 5,
+   "id": "1e0a152c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 6, 5, 4, 3],\n",
+       "       [3, 3, 0, 6, 9],\n",
+       "       [7, 1, 4, 1, 9],\n",
+       "       [2, 3, 0, 6, 9],\n",
+       "       [1, 0, 7, 5, 1]], dtype=int8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.integers(0, 10, size=(5,5), dtype='int8')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -276,9 +304,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc704e6d",
+   "metadata": {},
+   "source": [
+    "Numpy can be instructed to return random floats. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a12de2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6077853538880102"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.random()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e5e2869",
+   "metadata": {},
+   "source": [
+    "The size of output can be specified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5c2aaf9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66144271, 0.4437287 , 0.4995154 , 0.04236275, 0.02528114],\n",
+       "       [0.66003798, 0.75972011, 0.96388489, 0.51441058, 0.89117385],\n",
+       "       [0.85844032, 0.06267047, 0.16959795, 0.34212149, 0.33118328],\n",
+       "       [0.88377426, 0.20316774, 0.14472201, 0.0479867 , 0.30182125],\n",
+       "       [0.35437978, 0.15782886, 0.02028821, 0.96269458, 0.50492993]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng.random(size=(5,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c36df4d",
+   "metadata": {},
+   "source": [
+    "To specify the low and high values the formula ```(b + a) * rng.random() + a``` can be used. The following example outputs five floats between 0 (inclusive) and 3 (exclusive):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dde5e83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.27754452, 2.90083096, 2.4026595 , 2.50986051, 2.89876873],\n",
+       "       [1.34466054, 2.99078935, 2.50572988, 2.43213927, 2.27474002],\n",
+       "       [1.16422693, 1.11276781, 2.08547288, 0.95200726, 0.63026066],\n",
+       "       [1.34411567, 2.62536374, 0.17526736, 2.00068051, 2.96874137],\n",
+       "       [1.8923185 , 1.96793243, 2.53089317, 0.14100413, 1.61222455]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0 #low value\n",
+    "b = 3 #high value\n",
+    "x = rng.random(size=(5,5)) \n",
+    "y = (b + a) * x + a\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c8282f9",
+   "metadata": {},
+   "source": [
+    "Or for negative numbers between 0 (inclusive) and -1 (exclusive):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ea469ed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.56361935, -0.67498039, -0.24817614, -0.22942476, -0.14097549],\n",
+       "       [-0.29755511, -0.33217776, -0.49322518, -0.72233856, -0.96066994],\n",
+       "       [-0.07774997, -0.47710621, -0.19716358, -0.44669992, -0.50939829],\n",
+       "       [-0.17615139, -0.84507969, -0.27061157, -0.41917947, -0.32920109],\n",
+       "       [-0.24288987, -0.49256671, -0.12696165, -0.6513335 , -0.24533599]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0 \n",
+    "b = -1 \n",
+    "x = rng.random(size=(5,5)) \n",
+    "y = (b + a) * x + a\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e1cb2c4",
+   "metadata": {},
+   "source": [
+    "However, for negative numbers not including 0, the formula must be changed slightly. For example, for negative numbers between -1 (inclusive) and -2 (exclusive):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0fc63bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.81782439, -1.33483268, -1.86214438, -1.45858131, -1.21313488],\n",
+       "       [-1.87329575, -1.55683132, -1.62156005, -1.39604088, -1.67015834],\n",
+       "       [-1.64824406, -1.92603566, -1.11738592, -1.5859914 , -1.12482276],\n",
+       "       [-1.47984266, -1.97254827, -1.75016506, -1.82262824, -1.39500361],\n",
+       "       [-1.52494556, -1.60321317, -1.70093937, -1.06024305, -1.48439278]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = -1 \n",
+    "b = -2 \n",
+    "x = rng.random(size=(5,5))  \n",
+    "y = (b - a) * x + a\n",
+    "y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb98949f",
+   "id": "86566010",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fab7b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d0d32a5",
    "metadata": {},
    "outputs": [],
    "source": []
