--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -939,12 +939,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ad7d525",
+   "cell_type": "markdown",
+   "id": "ab23cecc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://stackoverflow.com/questions/26802581/can-anyone-identify-this-encoding?rq=1\n",
+    "https://docs.python.org/3.4/reference/lexical_analysis.html#grammar-token-shortbytesitem"
+   ]
   },
   {
    "cell_type": "code",
