--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -3556,15 +3556,13 @@
    "source": [
     "```numpy.random``` uses a seed to derive the initial state with a sequence of statistcally random numbers generated from this known starting point; the use of a known seed means that the the algorithm is repeatable. \n",
     "\n",
-    "Therefore, the numbers generated are not completely random and are known as \"pseudo-random numbers\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "455d416b",
-   "metadata": {},
-   "source": [
-    "## 6. Conclusion"
+    "Therefore, the numbers generated are not completely random and are known as \"pseudo-random numbers\".\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/random/bit_generators/pcg64.html#numpy.random.PCG64\n",
+    "https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.bit_generator.html#numpy.random.Generator.bit_generator\n",
+    "https://www.pcg-random.org/\n",
+    "https://www.pcg-random.org/rng-basics.html\n",
+    "https://en.wikipedia.org/wiki/Mersenne_Twister"
    ]
   },
   {
