--- a/numpy-random.ipynb
+++ b/numpy-random.ipynb
@@ -120,7 +120,7 @@
    "id": "f5707cb3",
    "metadata": {},
    "source": [
-    "At the time of writing this notebook, the most recent release of ```numpy.random``` is 1.21.0. This contents of this notebook are based on this release."
+    "At the time of writing this notebook, the most recent release of ```numpy.random``` is 1.21.0. This contents of this notebook are based on this release. Further information on ```numpy``` can be found on its website: https://numpy.org/."
    ]
   },
   {
